--- a/html/about/index.html
+++ b/html/about/index.html
@@ -1,98 +1,96 @@
 <!DOCTYPE html>
 <html>
 <!--Head-->
- 
-<!-- can i make title as varibles? -->
-
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-    <!-- Basic Metadata -->
-    <link rel="canonical" href="https://vickywang.me/">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title> Professional Background and Interests - Vicky Wang</title>    
-    <meta name="title" content="Professional Background and Interests - Vicky Wang">
-    <meta name="author" content="Vicky W.">
-    <meta name="description"
-      content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
-    <!-- Open Graph / Facebook -->
-    <meta property="og:locale" content="en_US">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Professional Background and Interests - Vicky WangInnovative UX Strategist Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang">
-    <meta property="og:"
-      content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
-    <meta property="og:url" content="https://vickywang.me/">
-    <meta property="og:site_name" content="Vicky's Website">
-    <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
-  
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://vickywang.me/">
-    <meta property="twitter:title" content="Professional Background and Interests - Vicky Wang">
-    <meta property="twitter:description"
-      content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
-    <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
-  
-    <!-- favicon -->
-  
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+  <!-- Basic Metadata -->
+  <link rel="canonical" href="https://vickywang.me/">
+
+  <title>
+    Professional Background and Interests - Vicky Wang
+  </title>
+  <meta name="title" content="Professional Background and Interests - Vicky Wang">
+  <meta name="author" content="Vicky W.">
+  <meta name="description" content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
+
+
   
   
-  
-    <!-- Google Font Preconnect-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- Google Font Preconnect-->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-      rel="stylesheet">
-    <!--sitewide font-family: 'Lato', sans-serif; -->
-    <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Caveat:wght@400;500;600;700&display=swap"
-      rel="stylesheet">
-    <!--handwriting -  font-family: 'Caveat', sans-serif; -->
-    <!--handwriting -  font-family: 'Caveat Brush', sans-serif; -->
-  
-    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
-    <!--handwriting font-family: 'Indie Flower'; -->
-  
-    <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
-    <!--handwriting font-family: 'Gloria Hallelujah';  | Hello font|-->
-  
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"
-      integrity="sha512-E8QSvWZ0eCLGk4km3hxSsNmGWbLtSCSUcewDQPQWZF6pEU8GlT8a5fF32wOl1i8ftdMhssTrF/OhyGWwonTcXA=="
-      crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <!-- crypto js -->
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <!--jQuery-->
-  
-    <!--aos-->
-    <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  
-  
-    <!-- google analytics-->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8YXDWJST2"></script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() { dataLayer.push(arguments); }
-      gtag('js', new Date());
-  
-      gtag('config', 'G-E8YXDWJST2');
-    </script>
-  
-    <!-- Links -->
-    <link rel="stylesheet" href="/main.css">
-    <script type="text/javascript" src="/scripts.js"></script>
-    <script type="text/javascript" src="/scripts_project.js"></script>
-    
-  
-  </head>
+  <!-- Open Graph / Facebook -->
+  <meta property="og:locale" content="en_US">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Professional Background and Interests - Vicky WangInnovative UX Strategist Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang">
+  <meta property="og:" content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
+  <meta property="og:url" content="https://vickywang.me/">
+  <meta property="og:site_name" content="Vicky's Website">
+  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://vickywang.me/">
+  <meta property="twitter:title" content="Professional Background and Interests - Vicky Wang">
+  <meta property="twitter:description" content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
+  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
+
+  <!-- favicon -->
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+
+
+
+  <!-- Google Font Preconnect-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- Google Font Preconnect-->
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+  <!--sitewide font-family: 'Lato', sans-serif; -->
+  <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Caveat:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <!--handwriting -  font-family: 'Caveat', sans-serif; -->
+  <!--handwriting -  font-family: 'Caveat Brush', sans-serif; -->
+
+  <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+  <!--handwriting font-family: 'Indie Flower'; -->
+
+  <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+  <!--handwriting font-family: 'Gloria Hallelujah';  | Hello font|-->
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js" integrity="sha512-E8QSvWZ0eCLGk4km3hxSsNmGWbLtSCSUcewDQPQWZF6pEU8GlT8a5fF32wOl1i8ftdMhssTrF/OhyGWwonTcXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <!-- crypto js -->
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <!--jQuery-->
+
+  <!--aos-->
+  <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+
+  <!-- google analytics-->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8YXDWJST2"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-E8YXDWJST2');
+  </script>
+
+  <!-- Links -->
+  <link rel="stylesheet" href="/main.css">
+  <script type="text/javascript" src="/scripts.js"></script>
+  <script type="text/javascript" src="/scripts_project.js"></script>
+
+
+</head>
 <!--Head-->
 
 
@@ -270,6 +268,7 @@
 
   <!--Arrow subtitle-->
 
+  
   <div class="blankHXS"></div>
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2">
@@ -277,43 +276,21 @@
       <div class="Grid-cell" data-aos="flip-up">
         <div class="element">
           <div class="elementInner cardBorder shadowBoxLt">
-            <img class="iconS" src="IconSearch.svg" alt="se-arrow">
-            <h4 data-aos="fade-up"> <strong> Prioritize Aligning User Needs with Business Goals</strong>
-            </h4>
-            <ul>
-              <li class="listCircle"> Conduct thorough user research to uncover what users truly need and value.</li>
-              <li class="listCircle"> Develop personas and user journeys that reflect the real users and their
-                interaction with the
-                product.</li>
-              <li class="listCircle"> Define clear business metrics that UX improvements should contribute towards, such
-                as increased user
-                retention or higher conversion rates.</li>
-              <li class="listCircle">Foster collaboration between UX designers, stakeholders, and business analysts to
-                ensure alignment on key objectives.
-              </li>
-            </ul>
+            <img class="iconM" src="IconSearch.svg" alt="se-arrow">
+            <h3 data-aos="fade-up"> <strong> Business &#38; Product Insight:</strong>
+            </h3>
+            <p>Deeply understand business objectives and product specifics, while focusing on user goals and pain
+              points.</p>
+
           </div>
         </div>
       </div>
       <div class="Grid-cell" data-aos="flip-up">
         <div class="element">
           <div class="elementInner cardBorder shadowBoxLt">
-            <img class="iconS" src="IconCategory.svg" alt="se-arrow">
-            <h4 data-aos="fade-up"> <strong> Embrace Continuous Testing &#38; Diverse Solutions</strong> </h4>
-            <ul>
-              <li class="listCircle">Implement a structured user testing regimen that validates design hypotheses at
-                various stages of the product development.
-              </li>
-              <li class="listCircle">Encourage a design culture that is not wedded to a single solution but is open to
-                experimentation and diverse perspectives.
-              </li>
-              <li class="listCircle">Analyze test results and user feedback to inform the iteration of designs.
-              </li>
-              <li class="listCircle">Utilize A/B testing to compare different design solutions and understand their
-                impact on user behavior.
-              </li>
-
-            </ul>
+            <img class="iconM" src="IconCategory.svg" alt="se-arrow">
+            <h3 data-aos="fade-up"> <strong> Roadmap Contribution &#38; Team Alignment: </strong> </h3>
+            <p>Actively contribute to the product roadmap and align goals with cross-functional teams.</p>
           </div>
         </div>
       </div>
@@ -323,51 +300,27 @@
       <div class="Grid-cell" data-aos="flip-up">
         <div class="element">
           <div class="elementInner cardBorder shadowBoxLt">
-            <img class="iconS" src="iconBrush.svg" alt="se-arrow">
+            <img class="iconM" src="iconBrush.svg" alt="se-arrow">
 
 
-            <h4 data-aos="fade-up"> <strong> Distill Concepts into Clear &#38; Simplified Design </strong> </h4>
+            <h3 data-aos="fade-up"> <strong> Design Sprint Management:</strong> </h3>
 
-            <ul>
-              <li class="listCircle">Focus on the essential features that support user tasks, avoiding unnecessary
-                complexity.
-              </li>
-              <li class="listCircle">Use clear, consistent, and concise language in UI copy, labels, and instructions.
-              </li>
-              <li class="listCircle">Apply principles of visual hierarchy to guide users naturally through the flow of
-                the product.
-              </li>
-              <li class="listCircle">Simplify user paths to reduce the number of steps required to complete a task.
-              </li>
+            <P>Plan and execute design sprints, setting clear deadlines for phases like discovery, definition, design,
+              and testing.</P>
 
-
-            </ul>
           </div>
         </div>
       </div>
       <div class="Grid-cell" data-aos="flip-up">
         <div class="element">
           <div class="elementInner cardBorder shadowBoxLt">
-            <img class="iconS" src="IconDocument.svg" alt="se-arrow">
+            <img class="iconM" src="IconDocument.svg" alt="se-arrow">
 
 
-            <h4 data-aos="fade-up"> <strong> Commit to Ongoing Learning &#38; Iterative Improvement</strong> </h4>
+            <h3 data-aos="fade-up"> <strong> Solution-Oriented Design:</strong> </h3>
 
-            <ul>
-              <li class="listCircle">Stay updated with the latest UX trends, tools, and methodologies through continuous
-                education and professional development.
-              </li>
-              <li class="listCircle">Regularly review and reassess existing user interfaces for opportunities to enhance
-                usability and accessibility.
-              </li>
-              <li class="listCircle">Incorporate feedback loops with users, stakeholders, and team members to foster a
-                culture of open communication and continuous refinement.
-              </li>
-              <li class="listCircle">Document lessons learned from each project to build a knowledge base for future
-                reference and to avoid repeating past mistakes.
-              </li>
-
-            </ul>
+            <P>Grasp product scope and stakeholder needs, integrating new designs into existing systems with a focus on
+              simplicity and problem-solving.</P>
           </div>
         </div>
       </div>
@@ -696,17 +649,6 @@
   </footer>
   <!--footer-->
   <!-- Shared across the platform -->
-
-
-
-
-
-
-
-
-  <!--footer-->
-  <!--footer-->
-
 </body>
 
 </html>
