--- a/html/architecture/index.html
+++ b/html/architecture/index.html
@@ -1,98 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <!--Head-->
- 
-<!-- can i make title as varibles? -->
-
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-    <!-- Basic Metadata -->
-    <link rel="canonical" href="https://vickywang.me/">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title> Architectural Innovation and Academic Exploration - Vicky Wang</title>    
-    <meta name="title" content="Architectural Innovation and Academic Exploration - Vicky Wang">
-    <meta name="author" content="Vicky W.">
-    <meta name="description"
-      content=" a showcase of innovative design projects from her M.Arch program, highlighting expertise in building form, spatial arrangement, and environmental considerations.">
-    <!-- Open Graph / Facebook -->
-    <meta property="og:locale" content="en_US">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Architectural Innovation and Academic Exploration - Vicky WangInnovative UX Strategist Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang">
-    <meta property="og:"
-      content=" a showcase of innovative design projects from her M.Arch program, highlighting expertise in building form, spatial arrangement, and environmental considerations.">
-    <meta property="og:url" content="https://vickywang.me/">
-    <meta property="og:site_name" content="Vicky's Website">
-    <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
-  
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://vickywang.me/">
-    <meta property="twitter:title" content="Architectural Innovation and Academic Exploration - Vicky Wang">
-    <meta property="twitter:description"
-      content=" a showcase of innovative design projects from her M.Arch program, highlighting expertise in building form, spatial arrangement, and environmental considerations.">
-    <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
-  
-    <!-- favicon -->
-  
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+  <!-- Basic Metadata -->
+  <link rel="canonical" href="https://vickywang.me/">
+
+  <title>
+    Architectural Innovation and Academic Exploration - Vicky Wang
+  </title>
+  <meta name="title" content="Architectural Innovation and Academic Exploration - Vicky Wang">
+  <meta name="author" content="Vicky W.">
+  <meta name="description" content=" a showcase of innovative design projects from her M.Arch program, highlighting expertise in building form, spatial arrangement, and environmental considerations.">
+
+
   
   
-  
-    <!-- Google Font Preconnect-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- Google Font Preconnect-->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-      rel="stylesheet">
-    <!--sitewide font-family: 'Lato', sans-serif; -->
-    <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Caveat:wght@400;500;600;700&display=swap"
-      rel="stylesheet">
-    <!--handwriting -  font-family: 'Caveat', sans-serif; -->
-    <!--handwriting -  font-family: 'Caveat Brush', sans-serif; -->
-  
-    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
-    <!--handwriting font-family: 'Indie Flower'; -->
-  
-    <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
-    <!--handwriting font-family: 'Gloria Hallelujah';  | Hello font|-->
-  
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"
-      integrity="sha512-E8QSvWZ0eCLGk4km3hxSsNmGWbLtSCSUcewDQPQWZF6pEU8GlT8a5fF32wOl1i8ftdMhssTrF/OhyGWwonTcXA=="
-      crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <!-- crypto js -->
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <!--jQuery-->
-  
-    <!--aos-->
-    <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  
-  
-    <!-- google analytics-->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8YXDWJST2"></script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() { dataLayer.push(arguments); }
-      gtag('js', new Date());
-  
-      gtag('config', 'G-E8YXDWJST2');
-    </script>
-  
-    <!-- Links -->
-    <link rel="stylesheet" href="/main.css">
-    <script type="text/javascript" src="/scripts.js"></script>
-    <script type="text/javascript" src="/scripts_project.js"></script>
-    
-  
-  </head>
+  <!-- Open Graph / Facebook -->
+  <meta property="og:locale" content="en_US">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Architectural Innovation and Academic Exploration - Vicky WangInnovative UX Strategist Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang">
+  <meta property="og:" content=" a showcase of innovative design projects from her M.Arch program, highlighting expertise in building form, spatial arrangement, and environmental considerations.">
+  <meta property="og:url" content="https://vickywang.me/">
+  <meta property="og:site_name" content="Vicky's Website">
+  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://vickywang.me/">
+  <meta property="twitter:title" content="Architectural Innovation and Academic Exploration - Vicky Wang">
+  <meta property="twitter:description" content=" a showcase of innovative design projects from her M.Arch program, highlighting expertise in building form, spatial arrangement, and environmental considerations.">
+  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
+
+  <!-- favicon -->
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+
+
+
+  <!-- Google Font Preconnect-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- Google Font Preconnect-->
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+  <!--sitewide font-family: 'Lato', sans-serif; -->
+  <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Caveat:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <!--handwriting -  font-family: 'Caveat', sans-serif; -->
+  <!--handwriting -  font-family: 'Caveat Brush', sans-serif; -->
+
+  <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+  <!--handwriting font-family: 'Indie Flower'; -->
+
+  <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+  <!--handwriting font-family: 'Gloria Hallelujah';  | Hello font|-->
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js" integrity="sha512-E8QSvWZ0eCLGk4km3hxSsNmGWbLtSCSUcewDQPQWZF6pEU8GlT8a5fF32wOl1i8ftdMhssTrF/OhyGWwonTcXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <!-- crypto js -->
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <!--jQuery-->
+
+  <!--aos-->
+  <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+
+  <!-- google analytics-->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8YXDWJST2"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-E8YXDWJST2');
+  </script>
+
+  <!-- Links -->
+  <link rel="stylesheet" href="/main.css">
+  <script type="text/javascript" src="/scripts.js"></script>
+  <script type="text/javascript" src="/scripts_project.js"></script>
+
+
+</head>
 <!--Head-->
 
 
